--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url = jdbc:mysql://127.0.0.1:3306/YoutubeSimulation?serverTimezone=America/Chicago
+spring.datasource.url = jdbc:mysql://127.0.0.1:3306/YoutubeSimulation?useSSL=false
 spring.datasource.username = root
-spring.datasource.password =
+spring.datasource.password =@livger8
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
